# ivozzo-pyBoilerplate

./: LICENSE  Pipfile  README.md  setup.cfg  setup.py
boilerplate/: logger.py  mongo.py  mongodatabase.py
boilerplate/logging/: initializer.py
boilerplate/mongo/: initializer.py
